--- a/server/package.json
+++ b/server/package.json
@@ -10,7 +10,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
-    "nodemon": "^2.0.6"
+    "mongoose": "^5.11.6",
+    "nodemon": "^2.0.6",
+    "prettier": "^2.2.1"
   }
 }
